# slsqp-rssl

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: minimize_bench.rs
examples/: basic.rs
hs-test-suite/: Cargo.toml
hs-test-suite/src/: lib.rs
src/: blas.rs  error.rs  hfti.rs  householder.rs  ldl.rs  lib.rs  lsei.rs  lsq.rs  matrix.rs  mode.rs  nnls.rs  solver.rs  solver_body.rs  wasm.rs
tests/: integration_test.rs  nnls_exhaustive_test.rs  nnls_runner.py  scipy_comparison_test.rs  scipy_runner.py
tests/scipy_comparison/: comparator.rs  mod.rs  python_runner.rs
