[package]
name = "slsqp-rssl"
description = "slsqp rust impl, ported from scipy Fortran impl"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/shuoli84/slsqp-rssl"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

[dev-dependencies]
criterion = "0.8"
slsqp-test-cases = { path = "hs-test-suite" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
wasm = ["wasm-bindgen", "js-sys"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[[example]]
name = "basic"

[[bench]]
name = "minimize_bench"
harness = false
